--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,17 +1,28 @@
-<%= form_with(model: event) do |form| %>
-  <% if event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
+<%= form_for(@event) do |form| %>
+  <%= render partial: "partials/form_errors", locals: { model: @event } %>
 
-      <ul>
-        <% event.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.label :title %>
+    <%= form.text_field :title, class: "form-control" %>
   </div>
+
+  <div class="form-group">
+    <%= form.label :address %>
+    <%= form.text_field :address, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :datetime %>
+    <%= form.datetime_select :datetime, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :description %>
+    <%= form.text_area :description, class: "form-control" %>
+  </div>
+
+  <div class="action">
+    <%= form.submit "Сохранить", class: "btn btn-primary" %> или <%= link_to "Вернуться", :back %>
+  </div>
+
 <% end %>
