--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,22 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
+
+      <% if user_signed_in? %>
+        <li class="nav-item active">
+          <%= link_to "Профиль", current_user, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "Выйти", destroy_user_session_path, :method => :delete, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li class="nav-item active">
+          <%= link_to "Войти", new_user_session_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "Зарегистрироваться", new_user_registration_path, class: "nav-link" %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
