--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -7,7 +7,7 @@
       <div class="caption">
         <div class="event-description">
           <h3><%= link_to event.title, event_path(event ) %></h3>
-          <h5><small><%= event.datetime %></small></h5>
+          <h5><small><%= l event.datetime, format: :short %></small></h5>
           <div class="buffer-both"><%= event.address %></div>
         </div>
       </div>
