--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,16 @@
 
 
     <div class="container">
+    <% if flash.any? %>
+          <div class="content-wrapper buffer-both">
+            <% flash.each do |name, message| %>
+              <%= content_tag :div, message, class: "flash-#{name}" %>
+            <% end %>
+          </div>
+        <% end %>
       <div class="row">
         <div class="col-lg-9">
+
           <%= yield %>
         </div>
       </div>
