Add Bootstrap alert for messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
     <% if flash.any? %>
           <div class="content-wrapper buffer-both">
             <% flash.each do |name, message| %>
-              <%= content_tag :div, message, class: "flash-#{name}" %>
+              <%= content_tag :div, message, class: "flash-#{name} alert alert-primary" %>
             <% end %>
           </div>
         <% end %>
