--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,16 +43,9 @@
 
 
     <div class="container">
-    <% if flash.any? %>
-          <div class="content-wrapper buffer-both">
-            <% flash.each do |name, message| %>
-              <%= content_tag :div, message, class: "flash-#{name} alert alert-primary" %>
-            <% end %>
-          </div>
-        <% end %>
       <div class="row">
         <div class="col-lg-9">
-
+          <%= flash_messages %>
           <%= yield %>
         </div>
       </div>
