--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,7 +14,8 @@
 
           <% if current_user_can_edit?(@event) %>
             <div class="buffer-top">
-               <%= link_to "Изменить", edit_event_path(@event), class: "btn btn-primary" %>
+               <%= link_to t('.change'), edit_event_path(@event), class: "btn btn-primary" %>
+               <%= link_to t('.delete'), event_path(@event), method: :delete, data: { confirm: t('.are_you_sure')} , class: "btn btn-danger" %>
             </div>
           <% end %>
         </div>
