--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,12 @@
     <%= form.text_field :email, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :avatar %>
+    <p><%= image_tag(@user.avatar.thumb.url) if @user.avatar? %></p>
+    <%= form.file_field :avatar %>
+  </div>
+
   <div class="actions">
     <%= form.submit "Сохранить", class: "btn btn-primary" %> или <%= link_to "Вернуться", :back %>
   </div>
