--- a/app/frontend/styles/application.scss
+++ b/app/frontend/styles/application.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
+@import '~air-datepicker/dist/css/datepicker.min';
 @import 'style';
 @import 'events';
 @import 'user';
