Fix russian translate

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="action">
-    <%= form.submit "Сохранить", class: "btn btn-primary" %> или <%= link_to "Вернуться", :back %>
+    <%= form.submit t('.save'), class: "btn btn-primary" %> или <%= link_to t('.back'), :back %>
   </div>
 
 <% end %>
