--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
     <%= render "form" %>
 
     <p class="buffer-top">
-      <%= link_to "Сменить пароль", edit_user_registration_path %>
+      <%= link_to t('.change_password'), edit_user_registration_path %>
     </p>
 
   </div>
