--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
   <% if @user == current_user %>
     <p class="buffer-top">
-      <%= link_to "Редактировать профиль", edit_user_path(@user), class: "btn btn-primary" %>
+      <%= link_to t('.edit_profile'), edit_user_path(@user), class: "btn btn-primary" %>
     </p>
   <% end %>
 </div>
