--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -14,6 +14,6 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit "Отправить", class: "btn btn-primary" %>
+    <%= f.submit t('.submit'), class: "btn btn-primary" %>
   </div>
 <% end %>
