--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to "BBQ!", root_path, class: "navbar-brand" %>
+  <%= link_to t('app.name'), root_path, class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -24,17 +24,17 @@
 
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Профиль", current_user, class: "nav-link" %>
+          <%= link_to t('app.profile'), current_user, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Выйти", destroy_user_session_path, :method => :delete, class: "nav-link" %>
+          <%= link_to t('app.logout'), destroy_user_session_path, :method => :delete, class: "nav-link" %>
         </li>
       <% else %>
         <li class="nav-item active">
-          <%= link_to "Войти", new_user_session_path, class: "nav-link" %>
+          <%= link_to t('app.signin'), new_user_session_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Зарегистрироваться", new_user_registration_path, class: "nav-link" %>
+          <%= link_to t('app.signup'), new_user_registration_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
