--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -14,6 +14,6 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit "Подписаться", class: "btn btn-primary" %>
+    <%= f.submit t('.subscribe'), class: "btn btn-primary" %>
   </div>
 <% end %>
