--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Сохранить", class: "btn btn-primary" %> или <%= link_to "Вернуться", :back %>
+    <%= form.submit t('.save'), class: "btn btn-primary" %> или <%= link_to "Вернуться", :back %>
   </div>
 
 <% end %>
