--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -6,6 +6,6 @@
   <% end %>
 
   <% if current_user_can_edit?(subscription) %>
-    <%= link_to fa_icon('times'), event_subscription_path(subscription.event, subscription), method: :delete, data: { confirm: t('destroy_confirm') } %>
+    <%= link_to fa_icon('times'), event_subscription_path(subscription.event, subscription), method: :delete, data: { confirm: t('.destroy_confirm') } %>
   <% end %>
 </span>
