Add EventMailer, mailjet

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="form-group">
     <%= form.label :datetime %>
-    <%= form.text_field :datetime, class: "datepicker-here form-control" %>
+    <%= form.text_field :datetime, class: "datepicker-here form-control", data: { timepicker: true } %>
   </div>
 
   <div class="form-group">
