--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
         </div>
       </div>
       <footer class="buffer-both">
-        <p>&copy; <%= t('app.company') %> 2021</p>
+        <p>&copy; <%= t('app.company')%>, <%= Time.now.year %></p>
       </footer>
     </div>
   </body>
