--- a/app/views/event_mailer/subscription.html.erb
+++ b/app/views/event_mailer/subscription.html.erb
@@ -7,7 +7,7 @@
 <%= t('.event') %>
 <h3><%= @event.title %></h3>
 
-<%= t('.author') %>
+<%= t('.datetime') %>
 <h4><%= l @event.datetime %></h4>
 
 <%= t('.owner') %>
