--- a/app/views/event_mailer/comment.html.erb
+++ b/app/views/event_mailer/comment.html.erb
@@ -1,13 +1,13 @@
 <h1><%= t('.title') %></h1>
-<p><%= t('.name') %>: <strong><%= @name %></strong></p>
-<p><%= t('.email') %>: <strong><%= link_to @email, "mailto:#{@email}" %></strong></p>
+<p><%= @comment.body %></p>
+<p><%= t('.author') %>: <strong><%= @comment.user_name %></strong></p>
 
-<hr>
+<hr/>
 
 <%= t('.event') %>
 <h3><%= @event.title %></h3>
 
-<%= t('.author') %>
+<%= t('.datetime') %>
 <h4><%= l @event.datetime %></h4>
 
 <%= t('.owner') %>
