--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
   <div class="form-group">
     <%= f.label :password %>
     <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
-      <small class="form-text text-muted"> Не менее 6 символов</small>
+      <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length') %></small>
   </div>
 
   <div class="form-group">
