--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,9 @@
-<h1>События</h1>
+<h1><%= t('.events') %></h1>
 
-<div class="buffer-both">
+<div class="buffer-bottom">
   <%= link_to t('.create_event'), new_event_path, class: "btn btn-success" %>
 </div>
 
-<div class="row buffer-bottom">
+<div class="row buffer-both">
   <%= render partial: "events/event", collection: @events %>
 </div>
