--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -51,11 +51,11 @@
 
     <div class="col-md-4">
       <div class="event-owner">
-        <h4>Зовёт:</h4>
+        <h4><%= t('.calling_out') %>:</h4>
         <p><%= render partial: 'users/user', object: @event.user %></p>
       </div>
       <div class="event-subscriptions">
-        <h4>Пойдут:</h4>
+        <h4><%= t('.they_will_go') %>:</h4>
         <div>
           <p>
             <%= render partial: 'subscriptions/subscription', collection: @event.subscriptions.except(@new_subscription) %>
@@ -64,7 +64,7 @@
       </div>
       <% if @event.user != current_user %>
         <div class="event-subscription-form">
-          <h4>Я пойду:</h4>
+          <h4><%= t('.i_will_go') %>:</h4>
           <div>
             <%= render partial: 'subscriptions/form', locals: { subscription: @new_subscription || @event.subscriptions.build } %>
           </div>
