--- a/app/views/partials/_form_errors.html.erb
+++ b/app/views/partials/_form_errors.html.erb
@@ -3,7 +3,7 @@
 <% if errors.any? %>
   <div class="alert alert-danger">
     <div class="lead buffer-bottom">
-      В вашей форме <%= t('.errors_count', count: errors.count) %>
+      <%= t('.in_your_form') %> <%= t('.errors_count', count: errors.count) %>
     </div>
 
     <ul>
