--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,12 +13,12 @@
 <div class="row">
   <div class="col-md-12">
     <% if @user.events.any? %>
-      <h3>Организовал</h3>
+      <h3><%= t('.organized_by') %></h3>
       <div class="row">
         <%= render partial: 'events/event', collection: @user.events %>
       </div>
     <% else %>
-      <p class="buffer-top">Пользователь пока не организовал ни одного события</p>
+      <p class="buffer-top"><%= t('.user_has_not_yet_organized_any_events') %></p>
     <% end %>
   </div>
 </div>
