--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -54,6 +54,7 @@
         <h4><%= t('.calling_out') %>:</h4>
         <p><%= render partial: 'users/user', object: @event.user %></p>
       </div>
+      <% if @event.subscriptions.count > 0 %>
       <div class="event-subscriptions">
         <h4><%= t('.they_will_go') %>:</h4>
         <div>
@@ -62,6 +63,7 @@
           </p>
         </div>
       </div>
+      <% end %>
       <% if @event.user != current_user %>
         <div class="event-subscription-form">
           <h4><%= t('.i_will_go') %>:</h4>
