Add lightbox2 for images

--- a/app/frontend/styles/application.scss
+++ b/app/frontend/styles/application.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~air-datepicker/dist/css/datepicker.min';
+@import '~lightbox2/dist/css/lightbox.min';
 @import 'style';
 @import 'events';
 @import 'user';
