--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,4 +1,4 @@
 <div class="event-photo buffer-both">
-  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url %>
+  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, :data => { :"lightbox" => @event.title } %>
   <%= t('.added') %> <%= render partial: 'users/user', object: photo.user %>
 </div>
