Add Yandex Geolink

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
           <div class="event-description">
             <h1><%= @event.title %></h1>
             <h5><%= l @event.datetime, format: :short %></h5>
-            <h3><small><%= link_to @event.address, "https://yandex.ru/maps/?text=#{@event.address}" %></small></h3>
+            <h3><small><span class="ymaps-geolink"><%= link_to @event.address, "https://yandex.ru/maps/?text=#{@event.address}" %></span></small></h3>
             <p><%= @event.description %></p>
           </div>
 
