--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= javascript_pack_tag 'application' %>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=b2fc9785-f219-4e04-b514-1f1e3bfc624e&lang=ru_RU&load=Geolink" type="text/javascript">
+    </script>
   </head>
 
   <body>
