--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
           <div class="event-description">
             <h1><%= @event.title %></h1>
             <h5><%= l @event.datetime, format: :short %></h5>
-            <h3><small><span class="ymaps-geolink"><%= link_to @event.address, "https://yandex.ru/maps/?text=#{@event.address}" %></span></small></h3>
+            
             <p><%= @event.description %></p>
           </div>
 
@@ -50,6 +50,11 @@
     </div>
 
     <div class="col-md-4">
+    <div class="event-owner buffer-both">
+        <h4><%= t('.where') %>:</h4>
+        <span class="ymaps-geolink" ><%= @event.address %></span>
+      </div>
+
       <div class="event-owner">
         <h4><%= t('.calling_out') %>:</h4>
         <p><%= render partial: 'users/user', object: @event.user %></p>
