--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-6 col-md-4">
+<div class="col-sm-6 col-md-4 buffer-bottom">
   <div class="thumbnail">
 
     <%= content_tag "div", "", class: "event-background", style: "background-image: url(#{image_path('event_thumb.jpg')})" %>
