--- a/app/frontend/styles/events.css
+++ b/app/frontend/styles/events.css
@@ -35,8 +35,6 @@
   background: rgba(0, 0, 0, 0.4);
 }
 
-.event-map {
-  margin: 20px 0;
-  width: 100%;
-  height: 400px;
+.event-photos-gallery {
+  margin: 5px;
 }
