--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,4 +1,3 @@
-<div class="event-photo buffer-both">
-  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, :data => { :"lightbox" => @event.title } %>
-  <%= t('.added') %> <%= render partial: 'users/user', object: photo.user %>
-</div>
+<%= link_to image_tag(photo.photo.thumb.url), photo.photo.url,
+  :data => { :"lightbox" => @event.title, :"title" => "Добавил #{render partial: 'users/user', object: photo.user}
+  #{link_to(fa_icon('trash'), event_photo_path(photo.event, photo), method: :delete, data: { confirm: t('.destroy_confirm')})}" } %>
