--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,5 +1,5 @@
 <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url,
-  :data => { :"lightbox" => @event.title, :"title" => "Добавил #{render partial: 'users/user', object: photo.user}
-  #{ if current_user_can_edit?(photo)
+  data: { lightbox: @event.title, title: "#{t('.added')} #{render partial: 'users/user', object: photo.user}
+  #{if current_user_can_edit?(photo)
     link_to(fa_icon('trash'), event_photo_path(photo.event, photo), method: :delete, data: { confirm: t('.destroy_confirm')})
-    end }" } %>
+    end}" } %>
